--- a/build.gradle
+++ b/build.gradle
@@ -4,22 +4,28 @@ apply plugin: 'eclipse'
 
 archivesBaseName = 'DatabaseHelper'
 version = '1.0.0-SNAPSHOT'
-group = 'scala.db'
+group = 'com.github.pccwhk'
 
 repositories {
     mavenCentral()
+    maven {
+        url "http://repo.typesafe.com/typesafe/releases/"
+    }
 }
 
 dependencies {
     compile 'org.scala-lang:scala-library:2.11.5'
-    
+    compile 'com.h2database:h2:1.4.185'
     compile 'com.zaxxer:HikariCP-java6:2.3.2'
+    compile "org.mongodb:casbah_2.11:2.8.0"
     
     
     testCompile 'com.h2database:h2:1.4.185'
     testCompile "org.scala-lang:scala-library:2.11.5"
     testCompile "org.scalatest:scalatest_2.11:2.2.4"
     testCompile "junit:junit:4.12"
+    testCompile "org.mongodb:casbah_2.11:2.8.0"
+    testCompile "org.reactivemongo:reactivemongo_2.11:0.10.5.0.akka23"
 }
 
 jar.doFirst{
